--- a/TOTP_BugTracker/TOTP_BugTracker - Backup.csproj
+++ b/TOTP_BugTracker/TOTP_BugTracker - Backup.csproj
@@ -36,7 +36,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\img\" />
+    <Folder Include="NewFolder2\" />
   </ItemGroup>
 
 </Project>
