Added notification and email services.

--- a/TOTP_BugTracker/TOTP_BugTracker.csproj
+++ b/TOTP_BugTracker/TOTP_BugTracker.csproj
@@ -23,6 +23,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Controllers\TicketAttachmentsController.cs" />
+    <Compile Remove="Controllers\TicketCommentsController.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MailKit" Version="3.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.8" />
