--- a/TOTP_BugTracker.csproj
+++ b/TOTP_BugTracker.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aspnet-TOTP_BugTracker-B73428F6-BD97-4BBF-9B75-1D806E7E613A</UserSecretsId>
+	  <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
 
   <ItemGroup>
